k8s_manifests/monitor.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoringlb
  namespace: prometheus
  annotations:
    alb.ingress.kubernetes.io/group.name: demo-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    #Uncommnt below to enable https, generate certificate from AWS ACM
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:638386391095:certificate/cc497129-de8c-43a4-ad2a-a421f5e1df4b
spec:
  ingressClassName: alb
  rules:
    - host: monitor.mycloudapphosting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
